--- a/style.css
+++ b/style.css
@@ -38,13 +38,17 @@ section p {
     position: absolute;
     top: 5px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     letter-spacing: 2px;
-    font-weight: 500;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 section .joke-section {
-    background-color: red;
+    padding: 1rem 3rem;
+    text-align: center;
+    letter-spacing: 1px;
+    font-weight: 550;
 }
 
 section button.joke-btn {
