making the page responsive

--- a/style.css
+++ b/style.css
@@ -70,3 +70,26 @@ section button.joke-btn:hover {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
     transform: translateY(-3px);
 }
+
+@media (max-width: 730px) {
+    body section {
+        height: 50vh;
+        width: 80vw;
+    }
+}
+
+@media (max-width: 500px) {
+    body section {
+        height: 60vh;
+        width: 90vw;
+    }
+
+    section p {
+        font-size: 1rem;
+    }
+
+    section .joke-section {
+        font-size: 0.8rem;
+    }
+}
+
