--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: #e288f9;
     background-image: linear-gradient(315deg, #e288f9 0%, #ffc988 74%);
 }
@@ -69,6 +70,27 @@ section button.joke-btn {
 section button.joke-btn:hover {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
     transform: translateY(-3px);
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.4);
+    letter-spacing: 2px;
+}
+
+footer a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.7);
+    transition: all 0.3s ease;
 }
 
 @media (max-width: 730px) {
